--- a/_c8oProject/sequences/flowTestSequence.yaml
+++ b/_c8oProject/sequences/flowTestSequence.yaml
@@ -51,3 +51,10 @@
     ↓Element [steps.XMLElementStep-1607428073693]: 
     ↓Element1 [steps.XMLElementStep-1608043417011]: 
 ↓jIf [steps.IfStep-1606228684326]: 
+↓jIfThenElse [steps.IfThenElseStep-1608311675406]: 
+  ↓jThen [steps.ThenStep-1608311675409]: 
+    ↓Complex [steps.XMLComplexStep-1608311675412]: 
+  ↓jElse [steps.ElseStep-1608311675415]: 
+    ↓Element [steps.XMLElementStep-1608311675418]: 
+    ↓jElement [steps.ElementStep-1608311675421]: 
+    ↓ccc [steps.XMLElementStep-1608311675424]: 
