--- a/_c8oProject/sequences/flowTestSequence.yaml
+++ b/_c8oProject/sequences/flowTestSequence.yaml
@@ -1,20 +1,22 @@
 ↓Sequence_JS [steps.SimpleStep-1606228657743]: 
+↓Iterator [steps.IteratorStep-1608734384182]: 
 ↓Complex1 [steps.XMLComplexStep-1606228667958]: 
   nodeName: complex1212123
-  ↓jIf [steps.IfStep-1606228710695]: 
-    ↓Complex2 [steps.XMLComplexStep-1606228717528]: 
-      nodeName: complex2
-    ↓jSimpleSource [steps.SimpleSourceStep-1606228727320]: 
-      sourceDefinition: 
-        - xmlizable: 
-          - ↑classname: com.twinsoft.convertigo.beans.common.XMLVector
-          - com.twinsoft.convertigo.beans.common.XMLVector: 
-            - java.lang.String: 
-              - ↑value: 1606228717528
-            - java.lang.String: 
-              - ↑value: .
   ↓Call_Sequence [steps.SequenceStep-1606301775939]: 
     sourceSequence: C8oStudio.Execute
+  ↓jIterator [steps.SimpleIteratorStep-1608734397551]: 
+    ↓jIf [steps.IfStep-1606228710695]: 
+      ↓Complex2 [steps.XMLComplexStep-1606228717528]: 
+        nodeName: complex2
+      ↓jSimpleSource [steps.SimpleSourceStep-1606228727320]: 
+        sourceDefinition: 
+          - xmlizable: 
+            - ↑classname: com.twinsoft.convertigo.beans.common.XMLVector
+            - com.twinsoft.convertigo.beans.common.XMLVector: 
+              - java.lang.String: 
+                - ↑value: 1606228717528
+              - java.lang.String: 
+                - ↑value: .
   ↓jIfThenElse [steps.IfThenElseStep-1606398425655]: 
     ↓jThen [steps.ThenStep-1606398427087]: 
       ↓Complex [steps.XMLComplexStep-1606471421899]: 
